# api-calculator/src/main/java/tenpo/api/history/dto/HistoryResponse.java
@@ -1,0 +1,19 @@
+package tenpo.api.history.dto;
+
+import com.fasterxml.jackson.databind.PropertyNamingStrategies;
+import com.fasterxml.jackson.databind.annotation.JsonNaming;
+import java.util.List;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+
+@JsonNaming(PropertyNamingStrategies.SnakeCaseStrategy.class)
+@Getter
+@AllArgsConstructor
+public class HistoryResponse {
+
+    private final List<HistoryEntryResponse> items;
+    private final int page;
+    private final int size;
+    private final long totalElements;
+    private final int totalPages;
+}
